Fix dark mode styles with MDM command buttons

--- a/css/jamf.scss
+++ b/css/jamf.scss
@@ -14,5 +14,6 @@
       margin-right: 5px;
       font-size: 1.5em;
       vertical-align: middle;
+      color: black;
    }
 }
